--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <title>Daniels Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="title">test</div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
