--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div id="title">test</div>
+      <h1>Daniel's Quiz App</h1>
     </header>
     <main></main>
     <footer></footer>
