put icons in footer/nav

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
       <h1>Daniel's Quiz App</h1>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <nav>
+        <ul>
+          <li>
+            <a href="#"><img src="./assets/home.png" alt="Home Button" /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/bookmark.png" alt="Bookmark Button"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/profile.png" alt="Profile Button"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
