add classes to nav elements

--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
       <nav>
         <ul>
           <li>
-            <a href="#"><img src="./assets/home.png" alt="Home Button" /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/bookmark.png" alt="Bookmark Button"
+            <a class="current btn-home" href="#"
+              ><img src="./assets/home.png" alt="Home Button"
             /></a>
           </li>
           <li>
-            <a href="#"
+            <a class="btn-bookmark" href="#"
+              ><img
+                src="./assets/bookmark_transparent.png"
+                alt="Bookmark Button"
+            /></a>
+          </li>
+          <li>
+            <a class="btn-profile" href="#"
               ><img src="./assets/profile.png" alt="Profile Button"
             /></a>
           </li>
