manage to get icon image be elemets bg-images

--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
     <header>
       <h1>Daniel's Quiz App</h1>
     </header>
-    <main></main>
+    <main>Try to give the nav a's a bg-image instead of img</main>
     <footer>
       <nav>
         <ul>
-          <li>
-            <a class="current btn-home" href="#"
-              ><img src="./assets/home.png" alt="Home Button"
-            /></a>
+          <li class="current btn-home">
+            <a class="" href="#">
+              <!-- <img src="./assets/home.png" alt="Home Button"/> -->
+            </a>
           </li>
-          <li>
-            <a class="btn-bookmark" href="#"
-              ><img
-                src="./assets/bookmark_transparent.png"
-                alt="Bookmark Button"
-            /></a>
+          <li class="btn-bookmark">
+            <a href="#">
+              <!-- <img src="./assets/bookmark_transparent.png" alt="Bookmark Button"/> -->
+            </a>
           </li>
-          <li>
-            <a class="btn-profile" href="#"
-              ><img src="./assets/profile.png" alt="Profile Button"
-            /></a>
+          <li class="btn-profile">
+            <a href="#">
+              <!-- <img src="./assets/profile.png" alt="Profile Button"
+            /> -->
+            </a>
           </li>
         </ul>
       </nav>
