add basic structure of question cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <header>
       <h1>Daniel's Quiz App</h1>
     </header>
-    <main>Try to give the nav a's a bg-image instead of img</main>
+    <main>
+      <section id="question-cards">
+        <article class="question-card">
+          <h2 class="question"></h2>
+          <button class="btn-show-answer"></button>
+          <p class="answer"></p>
+          <div class="tags-container">
+            <span class="topic-tag">#html</span>
+            <span class="topic-tag">#flexbox</span>
+            <span class="topic-tag">#css</span>
+          </div>
+        </article>
+        <article class="question-card"></article>
+      </section>
+    </main>
     <footer>
       <nav>
         <ul>
