--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
       <h1>Daniel's Quiz App</h1>
     </header>
     <main>
-      <section id="question-cards">
+      <section id="question-cards-container">
         <article class="question-card">
-          <h2 class="question"></h2>
-          <button class="btn-show-answer"></button>
-          <p class="answer"></p>
+          <h2 class="question">What property flips the axis in flexbox?</h2>
+          <button class="btn-show-answer">Show answer</button>
+          <p class="answer">flex-direction</p>
           <div class="tags-container">
             <span class="topic-tag">#html</span>
             <span class="topic-tag">#flexbox</span>
             <span class="topic-tag">#css</span>
           </div>
         </article>
-        <article class="question-card"></article>
+        <article class="question-card">
+          <h2 class="question">Lorem ipsum dolor sit?</h2>
+          <button class="btn-show-answer">Show answer</button>
+          <p class="answer">blue</p>
+          <div class="tags-container">
+            <span class="topic-tag">#html</span>
+            <span class="topic-tag">#flexbox</span>
+            <span class="topic-tag">#css</span>
+          </div>
+        </article>
       </section>
     </main>
     <footer>
