--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniels Quiz App</title>
+
+    <link rel="stylesheet" href="fontawesome/css/fontawesome.css" />
+    <link rel="stylesheet" href="fontawesome/css/all.css" />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -18,9 +22,9 @@
           <button class="btn-show-answer">Show answer</button>
           <p class="answer">flex-direction</p>
           <div class="tags-container">
-            <span class="topic-tag">#html</span>
-            <span class="topic-tag">#flexbox</span>
-            <span class="topic-tag">#css</span>
+            <span class="category-tag">#html</span>
+            <span class="category-tag">#flexbox</span>
+            <span class="category-tag">#css</span>
           </div>
         </article>
         <article class="question-card">
@@ -28,9 +32,9 @@
           <button class="btn-show-answer">Show answer</button>
           <p class="answer">blue</p>
           <div class="tags-container">
-            <span class="topic-tag">#html</span>
-            <span class="topic-tag">#flexbox</span>
-            <span class="topic-tag">#css</span>
+            <span class="category-tag">#html</span>
+            <span class="category-tag">#flexbox</span>
+            <span class="category-tag">#css</span>
           </div>
         </article>
       </section>
@@ -41,17 +45,20 @@
           <li class="current btn-home">
             <a class="" href="#">
               <!-- <img src="./assets/home.png" alt="Home Button"/> -->
+              <i class="fa-solid fa-house"></i>
             </a>
           </li>
           <li class="btn-bookmark">
             <a href="#">
               <!-- <img src="./assets/bookmark_transparent.png" alt="Bookmark Button"/> -->
+              <i class="fa-regular fa-bookmark"></i>
             </a>
           </li>
           <li class="btn-profile">
             <a href="#">
               <!-- <img src="./assets/profile.png" alt="Profile Button"
             /> -->
+              <i class="fa-regular fa-user"></i>
             </a>
           </li>
         </ul>
