add styling for current button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <nav>
         <ul>
           <li class="current btn-home">
-            <a class="" href="#">
+            <a href="#">
               <!-- <img src="./assets/home.png" alt="Home Button"/> -->
               <i class="fa-solid fa-house"></i>
             </a>
