--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <main>
       <section id="question-cards-container">
         <article class="question-card">
+          <i class="fa-regular fa-bookmark"></i>
           <h2 class="question">What property flips the axis in flexbox?</h2>
           <button class="btn-show-answer">Show answer</button>
           <p class="answer">flex-direction</p>
@@ -28,6 +29,7 @@
           </div>
         </article>
         <article class="question-card">
+          <i class="fa-regular fa-bookmark"></i>
           <h2 class="question">Lorem ipsum dolor sit?</h2>
           <button class="btn-show-answer">Show answer</button>
           <p class="answer">blue</p>
