add bg hover for nav icons

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -44,16 +44,16 @@
     <footer>
       <nav>
         <ul>
-          <li class="current btn-home">
+          <li class="btn-home">
             <a href="#">
               <!-- <img src="./assets/home.png" alt="Home Button"/> -->
-              <i class="fa-solid fa-house"></i>
+              <i class="fa-regular fa-house"></i>
             </a>
           </li>
-          <li class="btn-bookmark">
+          <li class="current btn-bookmark">
             <a href="#">
               <!-- <img src="./assets/bookmark_transparent.png" alt="Bookmark Button"/> -->
-              <i class="fa-regular fa-bookmark"></i>
+              <i class="fa-solid fa-bookmark"></i>
             </a>
           </li>
           <li class="btn-profile">
