--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <header>
-      <h1>Daniel's Quiz App</h1>
+      <!-- <a href="index.html"> -->
+        <h1><a href="">Daniel's Quiz App</a></h1>
+      <!-- </a> -->
     </header>
     <main>
       <section id="question-cards-container">
@@ -32,7 +34,7 @@
           <i class="fa-regular fa-bookmark"></i>
           <h2 class="question">Lorem ipsum dolor sit?</h2>
           <button class="btn-show-answer">Show answer</button>
-          <p class="answer">blue</p>
+          <!-- <p class="answer">blue</p> -->
           <div class="tags-container">
             <span class="category-tag">#html</span>
             <span class="category-tag">#flexbox</span>
@@ -45,7 +47,7 @@
       <nav>
         <ul>
           <li class="btn-home">
-            <a href="#">
+            <a href="index.html">
               <!-- <img src="./assets/home.png" alt="Home Button"/> -->
               <i class="fa-regular fa-house"></i>
             </a>
@@ -57,7 +59,7 @@
             </a>
           </li>
           <li class="btn-profile">
-            <a href="#">
+            <a href="profile.html">
               <!-- <img src="./assets/profile.png" alt="Profile Button"
             /> -->
               <i class="fa-regular fa-user"></i>
