--- a/bookmarks.html
+++ b/bookmarks.html
@@ -20,7 +20,7 @@
     <main>
       <section id="question-cards-container">
         <article class="question-card">
-          <i class="fa-regular fa-bookmark"></i>
+          <i class="fa-solid fa-bookmark"></i>
           <h2 class="question">What property flips the axis in flexbox?</h2>
           <button class="btn-show-answer">Show answer</button>
           <!-- <p class="answer">flex-direction</p> -->
@@ -31,7 +31,7 @@
           </div>
         </article>
         <article class="question-card">
-          <i class="fa-regular fa-bookmark"></i>
+          <i class="fa-solid fa-bookmark"></i>
           <h2 class="question">Lorem ipsum dolor sit?</h2>
           <button class="btn-show-answer">Show answer</button>
           <!-- <p class="answer">blue</p> -->
