--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,9 +13,11 @@
   </head>
   <body>
     <header>
-      <!-- <a href="index.html"> -->
-        <h1><a href="">Daniel's Quiz App</a></h1>
-      <!-- </a> -->
+        <h1>
+          <i class="fa-solid fa-bolt"></i>
+          <a href="">Daniel's Quiz App</a>
+          <i class="fa-solid fa-bolt"></i>
+        </h1>
     </header>
     <main>
       <section id="question-cards-container">
@@ -48,21 +50,17 @@
         <ul>
           <li class="btn-home">
             <a href="index.html">
-              <!-- <img src="./assets/home.png" alt="Home Button"/> -->
-              <i class="fa-regular fa-house"></i>
+              <i class="fa-solid fa-house"></i>
             </a>
           </li>
           <li class="current btn-bookmark">
             <a href="#">
-              <!-- <img src="./assets/bookmark_transparent.png" alt="Bookmark Button"/> -->
               <i class="fa-solid fa-bookmark"></i>
             </a>
           </li>
           <li class="btn-profile">
             <a href="profile.html">
-              <!-- <img src="./assets/profile.png" alt="Profile Button"
-            /> -->
-              <i class="fa-regular fa-user"></i>
+              <i class="fa-solid fa-user"></i>
             </a>
           </li>
         </ul>
