--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   </head>
   <body>
     <header>
-      <h1>Daniel's Quiz App</h1>
-    </header>
+      <h1>
+        <i class="fa-solid fa-bolt"></i>
+        <a href="">Daniel's Quiz App</a>
+        <i class="fa-solid fa-bolt"></i>
+      </h1>
+  </header>
     <main>
       <section id="question-cards-container">
         <article class="question-card">
@@ -29,7 +33,7 @@
           </div>
         </article>
         <article class="question-card">
-          <i class="fa-regular fa-bookmark"></i>
+          <i class="fa-solid fa-bookmark"></i>
           <h2 class="question">Lorem ipsum dolor sit?</h2>
           <button class="btn-show-answer">Show answer</button>
           <p class="answer">blue</p>
@@ -51,16 +55,16 @@
             </a>
           </li>
           <li class="btn-bookmark">
-            <a href="#">
+            <a href="bookmarks.html">
               <!-- <img src="./assets/bookmark_transparent.png" alt="Bookmark Button"/> -->
-              <i class="fa-regular fa-bookmark"></i>
+              <i class="fa-solid fa-bookmark"></i>
             </a>
           </li>
           <li class="btn-profile">
-            <a href="#">
+            <a href="profile.html">
               <!-- <img src="./assets/profile.png" alt="Profile Button"
             /> -->
-              <i class="fa-regular fa-user"></i>
+              <i class="fa-solid fa-user"></i>
             </a>
           </li>
         </ul>
