--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniels Quiz App</title>
+    <title>Daniels Quiz App - Profile</title>
 
     <link rel="stylesheet" href="fontawesome/css/fontawesome.css" />
     <link rel="stylesheet" href="fontawesome/css/all.css" />
@@ -48,8 +48,8 @@
     <footer>
       <nav>
         <ul>
-          <li class="current btn-home">
-            <a href="#">
+          <li class="btn-home">
+            <a href="index.html">
               <i class="fa-solid fa-house"></i>
             </a>
           </li>
@@ -58,8 +58,8 @@
               <i class="fa-solid fa-bookmark"></i>
             </a>
           </li>
-          <li class="btn-profile">
-            <a href="profile.html">
+          <li class="current btn-profile">
+            <a href="#">
               <i class="fa-solid fa-user"></i>
             </a>
           </li>
