finish basic structure and styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <h1>
         <i class="fa-solid fa-bolt"></i>
-        <a href="">Daniel's Quiz App</a>
+        <a href="#">Daniel's Quiz App</a>
         <i class="fa-solid fa-bolt"></i>
       </h1>
   </header>
