minor bug fixes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
             Show answer
           </button>
-          <p class="answer" data-js="answer" data-answer-id="002">
+          <p class="answer" data-js="answer" data-answer-id="001" hidden>
             flex-direction
           </p>
           <div class="tags-container">
@@ -51,7 +51,7 @@
           >
             Show answer
           </button>
-          <p class="answer" data-js="answer" data-answer-id="002">ipsum</p>
+          <p class="answer" data-js="answer" data-answer-id="002" hidden>ipsum</p>
           <div class="tags-container">
             <span class="category-tag">#html</span>
             <span class="category-tag">#flexbox</span>
