--- a/profile.html
+++ b/profile.html
@@ -22,44 +22,51 @@
     <main>
       <section id="profile-card-container">
         <article id="profile-card">
-            <div id="profile-container">
-              <div id="profile">
-                <h3>Profile</h3>
-                <div id="about-me">
-                  <div id="user">
-                    <span>Daniel "The Web" Kaser</span>
-                    <img src="./images/icke.jpg" alt="Picture of the user" class="profile-picture">
-                  </div>
-                  <h4>About me</h4>
-                  <p>One day I'll be the king of flexbox... ❤️</p>
-                  <!-- <ul>
+          <div id="profile-container">
+            <section id="profile">
+              <h3>Profile</h3>
+              <div id="about-me">
+                <div id="user">
+                  <span>Daniel "The Web" Kaser</span>
+                  <img
+                    src="./images/icke.jpg"
+                    alt="Picture of the user"
+                    class="profile-picture"
+                  />
+                </div>
+                <h4>About me</h4>
+                <p>One day I'll be the king of flexbox... ❤️</p>
+                <!-- <ul>
                     <li>Create a new file profile.html.</li>
                     <li>Add content to the page.</li>
                     <li>Link the pages via the anchor elements.</li>
                   </ul> -->
-                </div>
               </div>
-              <div id="stats">
-                <div class="counter-created-questions">
-                  <i class="fa-solid fa-circle-question"></i>
-                  <span>12</span>
-                </div>
-                <div class="counter-bookmarks">
-                  <a href="bookmarks.html"><i class="fa-solid fa-bookmark"></i></a>
-                  <span>4</span>
-                </div>
+            </section>
+            <section id="stats">
+              <h3>Stats</h3>
+              <div class="counter-created-questions">
+                <i class="fa-solid fa-circle-question"></i>
+                <span>12</span>
               </div>
-              <div id="settings">
-                <h3>Settings</h3>
-                <div id="settings-container">
-                  <h4>Dark Mode</h4>
-                  <label class="switch">
-                    <input type="checkbox">
-                    <span class="slider round"></span>
-                  </label>
-                </div>
+              <div class="counter-bookmarks">
+                <a href="bookmarks.html"
+                  ><i class="fa-solid fa-bookmark"></i
+                ></a>
+                <span>4</span>
               </div>
-            </div>
+            </section>
+            <section id="settings">
+              <h3>Settings</h3>
+              <div id="settings-container">
+                <h4>Dark Mode</h4>
+                <label class="switch">
+                  <input type="checkbox" />
+                  <span class="slider round"></span>
+                </label>
+              </div>
+            </section>
+          </div>
         </article>
       </section>
     </main>
