--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.css" />
 
     <link rel="stylesheet" href="styles.css" />
-    <script src="index.js" defer></script>
+    <script src="./js/index.js" defer></script>
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
     <main>
       <section id="question-cards-container">
         <article class="question-card">
-          <i class="fa-regular fa-bookmark"></i>
+          <i class="fa-regular fa-bookmark" data-js="bookmark"></i>
           <h2 class="question">What property flips the axis in flexbox?</h2>
           <button
             class="btn-show-answer"
