finish show and hide answer functionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
           >
             Show answer
           </button>
-          <p class="answer" data-js="answer" data-answer-id="002">ipsum</p>
+          <p class="answer hidden" data-js="answer" data-answer-id="002">
+            ipsum
+          </p>
           <div class="tags-container">
             <span class="category-tag">#html</span>
             <span class="category-tag">#flexbox</span>
