finish interactive show answer button text content

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
             Show answer
           </button>
-          <p class="answer" data-js="answer" data-answer-id="002">
+          <p class="answer hidden" data-js="answer" data-answer-id="002">
             flex-direction
           </p>
           <div class="tags-container">
