add form.html to navigation

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <header>
-        <h1>
-          <i class="fa-solid fa-bolt"></i>
-          <a href="index.html">Daniel's Quiz App</a>
-          <i class="fa-solid fa-bolt"></i>
-        </h1>
+      <h1>
+        <i class="fa-solid fa-bolt"></i>
+        <a href="index.html">Daniel's Quiz App</a>
+        <i class="fa-solid fa-bolt"></i>
+      </h1>
     </header>
     <main>
       <section id="question-cards-container">
@@ -51,6 +51,11 @@
           <li class="btn-home">
             <a href="index.html">
               <i class="fa-solid fa-house"></i>
+            </a>
+          </li>
+          <li class="btn-add current">
+            <a href="#">
+              <i class="fa-solid fa-plus"></i>
             </a>
           </li>
           <li class="current btn-bookmark">
