--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
     <footer>
       <nav>
         <ul>
-          <li class="current btn-home">
-            <a href="#">
+          <li class="btn-home">
+            <a href="index.html">
               <i class="fa-solid fa-house"></i>
+            </a>
+          </li>
+          <li class="btn-add current">
+            <a href="#">
+              <i class="fa-solid fa-plus"></i>
             </a>
           </li>
           <li class="btn-bookmark">
