--- a/profile.html
+++ b/profile.html
@@ -74,6 +74,11 @@
               <i class="fa-solid fa-house"></i>
             </a>
           </li>
+          <li class="btn-add current">
+            <a href="#">
+              <i class="fa-solid fa-plus"></i>
+            </a>
+          </li>
           <li class="btn-bookmark">
             <a href="bookmarks.html">
               <i class="fa-solid fa-bookmark"></i>
