finish insert form

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -53,8 +53,8 @@
               <i class="fa-solid fa-house"></i>
             </a>
           </li>
-          <li class="btn-add current">
-            <a href="#">
+          <li class="btn-add">
+            <a href="form.html">
               <i class="fa-solid fa-plus"></i>
             </a>
           </li>
