--- a/form.html
+++ b/form.html
@@ -21,7 +21,27 @@
     </header>
     <main>
       <article id="profile-card">
-        <form></form>
+        <form>
+          <label for="new-question">Your Question</label>
+          <textarea
+            name="newQuestion"
+            id="new-question"
+            cols="30"
+            rows="10"
+            value="test"
+          ></textarea>
+          <label for="new-answer">Your Answer</label>
+          <textarea
+            name="newAnswer"
+            id="new-answer"
+            cols="30"
+            rows="10"
+            value="test"
+          ></textarea>
+          <label for="tags">Tags</label>
+          <input type="text" name="tags" id="tags" value="testTag" />
+          <button id="submit-button" type="submit">Submit</button>
+        </form>
       </article>
     </main>
     <footer>
