--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     <footer>
       <nav>
         <ul>
-          <li class="btn-home">
+          <li class="btn-home current">
             <a href="index.html">
               <i class="fa-solid fa-house"></i>
             </a>
           </li>
-          <li class="btn-add current">
-            <a href="#">
+          <li class="btn-add">
+            <a href="form.html">
               <i class="fa-solid fa-plus"></i>
             </a>
           </li>
