--- a/profile.html
+++ b/profile.html
@@ -74,8 +74,8 @@
               <i class="fa-solid fa-house"></i>
             </a>
           </li>
-          <li class="btn-add current">
-            <a href="#">
+          <li class="btn-add">
+            <a href="form.html">
               <i class="fa-solid fa-plus"></i>
             </a>
           </li>
