finish create new cards functionality

--- a/form.html
+++ b/form.html
@@ -23,9 +23,6 @@
     <main>
       <article id="profile-card">
         <form>
-          <label for="tags">Tags</label>
-          <input type="text" name="tags" id="tags" value="testTag" />
-          <button id="submit-button" type="submit">Submit</button>
           <label for="new-question">Your Question</label>
           <textarea
             name="newQuestion"
@@ -34,7 +31,7 @@
             rows="10"
             data-js="new-question"
           >
-New Question?</textarea
+How many Web Developers does it take to change a lightbulb?</textarea
           >
           <label for="new-answer">Your Answer</label>
           <textarea
@@ -44,8 +41,11 @@ New Question?</textarea
             rows="10"
             data-js="new-answer"
           >
-New Answer!</textarea
+Three.</textarea
           >
+          <label for="tags">Tags</label>
+          <input type="text" name="tags" id="tags" value="testTag" />
+          <button id="submit-button" type="submit">Submit</button>
         </form>
       </article>
     </main>
