add maxlength to textareas

--- a/form.html
+++ b/form.html
@@ -30,6 +30,7 @@
             cols="30"
             rows="10"
             data-js="new-question"
+            maxlength="150"
           >
 How many Web Developers does it take to change a lightbulb?</textarea
           >
@@ -40,6 +41,7 @@ How many Web Developers does it take to change a lightbulb?</textarea
             cols="30"
             rows="10"
             data-js="new-answer"
+            maxlength="150"
           >
 Three.</textarea
           >
