finish character count

--- a/form.html
+++ b/form.html
@@ -34,6 +34,12 @@
           >
 How many Web Developers does it take to change a lightbulb?</textarea
           >
+          <p
+            class="character-count-question"
+            data-js="character-count-question"
+          >
+            150 characters left
+          </p>
           <label for="new-answer">Your Answer</label>
           <textarea
             name="newAnswer"
@@ -45,6 +51,9 @@ How many Web Developers does it take to change a lightbulb?</textarea
           >
 Three.</textarea
           >
+          <p class="character-count-answer" data-js="character-count-answer">
+            150 characters left
+          </p>
           <label for="tags">Tags</label>
           <input type="text" name="tags" id="tags" value="testTag" />
           <button id="submit-button" type="submit">Submit</button>
