refactor form.js

--- a/form.html
+++ b/form.html
@@ -32,14 +32,15 @@
             data-js="new-question"
             maxlength="150"
           >
-How many Web Developers does it take to change a lightbulb?</textarea
+How many psychiatrists does it take to change a lightbulb?</textarea
           >
-          <p
+          <p>150 characters left</p>
+          <!-- <p
             class="character-count-question"
             data-js="character-count-question"
           >
             150 characters left
-          </p>
+          </p> -->
           <label for="new-answer">Your Answer</label>
           <textarea
             name="newAnswer"
@@ -49,11 +50,12 @@ How many Web Developers does it take to change a lightbulb?</textarea
             data-js="new-answer"
             maxlength="150"
           >
-Three.</textarea
+Only one, but the lightbulb has got to really want to change.</textarea
           >
-          <p class="character-count-answer" data-js="character-count-answer">
+          <p>150 characters left</p>
+          <!-- <p class="character-count-answer" data-js="character-count-answer">
             150 characters left
-          </p>
+          </p> -->
           <label for="tags">Tags</label>
           <input type="text" name="tags" id="tags" value="testTag" />
           <button id="submit-button" type="submit">Submit</button>
