add form reset functionality on submit

--- a/form.html
+++ b/form.html
@@ -31,16 +31,8 @@
             rows="10"
             data-js="new-question"
             maxlength="150"
-          >
-How many psychiatrists does it take to change a lightbulb?</textarea
-          >
+          ></textarea>
           <p>150 characters left</p>
-          <!-- <p
-            class="character-count-question"
-            data-js="character-count-question"
-          >
-            150 characters left
-          </p> -->
           <label for="new-answer">Your Answer</label>
           <textarea
             name="newAnswer"
@@ -49,15 +41,10 @@ How many psychiatrists does it take to change a lightbulb?</textarea
             rows="10"
             data-js="new-answer"
             maxlength="150"
-          >
-Only one, but the lightbulb has got to really want to change.</textarea
-          >
+          ></textarea>
           <p>150 characters left</p>
-          <!-- <p class="character-count-answer" data-js="character-count-answer">
-            150 characters left
-          </p> -->
           <label for="tags">Tags</label>
-          <input type="text" name="tags" id="tags" value="testTag" />
+          <input type="text" name="tags" id="tags" />
           <button id="submit-button" type="submit">Submit</button>
         </form>
       </article>
